--- a/graduate-school.html
+++ b/graduate-school.html
@@ -51,7 +51,7 @@
 							<a href="#structure-submenu" class="navigation-link" uk-toggle="target: #structure-submenu; animation: uk-animation-fade">СТРУКТУРА</a>
 							<div id="structure-submenu" class="structure-submenu" hidden>
 								<ul class="submenu">
-									<li class="navigation-item"><a href="#" class="navigation-link">Керівництво</a></li>
+									<li class="navigation-item"><a href="leadership.html" class="navigation-link">Керівництво</a></li>
 									<li class="navigation-item ">
 										<a href="#science-departments-submenu" class="navigation-link" uk-toggle="target: #science-departments-submenu; animation: uk-animation-fade">Наукові відділи</a>
 										<ul class="sub-submenu " id="science-departments-submenu" hidden>
@@ -74,8 +74,16 @@
 							</div>
 							
 						</li>
-						<li class="navigation-item"><a href="#" class="navigation-link">НАУКА</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link">ДІЯЛЬНІСТЬ</a></li>
+            <li class="navigation-item">
+              <a href="#activity-departments-submenu" class="navigation-link" uk-toggle="target: #activity-departments-submenu; animation: uk-animation-fade">ДІЯЛЬНІСТЬ</a>
+              <div id="activity-departments-submenu" hidden>
+                <ul class="submenu">
+                  <li class="navigation-item"><a href="#" class="navigation-link">Наукові досягнення</a></li>
+                  <li class="navigation-item"><a href="#" class="navigation-link">Науково-технічні розробки</a></li>
+                </ul>
+              </div>
+              
+            </li>
 						<li class="navigation-item"><a href="graduate-school.html" class="navigation-link">АСПІРАНТУРА</a></li>
 						<li class="navigation-item"><a href="#" class="navigation-link">ПУБЛІКАЦІЇ</a></li>
 						<li class="navigation-item"><a href="#" class="navigation-link">КОНТАКТИ</a></li>
