--- a/home.html
+++ b/home.html
@@ -51,14 +51,14 @@
 							<a href="#structure-submenu" class="navigation-link" uk-toggle="target: #structure-submenu; animation: uk-animation-fade">СТРУКТУРА</a>
 							<div id="structure-submenu" class="structure-submenu" hidden>
 								<ul class="submenu">
-									<li class="navigation-item"><a href="#" class="navigation-link">Керівництво</a></li>
+									<li class="navigation-item"><a href="leadership.html" class="navigation-link">Керівництво</a></li>
 									<li class="navigation-item ">
 										<a href="#science-departments-submenu" class="navigation-link" uk-toggle="target: #science-departments-submenu; animation: uk-animation-fade">Наукові відділи</a>
 										<ul class="sub-submenu " id="science-departments-submenu" hidden>
-											<li class="navigation-item"><a href="#" class="navigation-link">Відділ теорії конденсованного стану речовин</a></li>
-											<li class="navigation-item"><a href="#" class="navigation-link">Відділ кристалічних матеріалів склідних сполук</a></li>
-											<li class="navigation-item"><a href="#" class="navigation-link">Відділ оптичних та лазерних кристалів</a></li>
-											<li class="navigation-item"><a href="#" class="navigation-link">Відділ нелінійно-оптичних кристалів</a></li>
+											<li class="navigation-item"><a href="tcfs.html" class="navigation-link">Відділ теорії конденсованного стану речовин</a></li>
+											<li class="navigation-item"><a href="cmcc.html" class="navigation-link">Відділ кристалічних матеріалів складних сполук</a></li>
+											<li class="navigation-item"><a href="olc.html" class="navigation-link">Відділ оптичних та лазерних кристалів</a></li>
+											<li class="navigation-item"><a href="noc.html" class="navigation-link">Відділ нелінійно-оптичних кристалів</a></li>
 										</ul>
 									</li>
 									<li class="navigation-item ">
@@ -74,8 +74,16 @@
 							</div>
 							
 						</li>
-						<li class="navigation-item"><a href="#" class="navigation-link">НАУКА</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link">ДІЯЛЬНІСТЬ</a></li>
+            <li class="navigation-item">
+              <a href="#activity-departments-submenu" class="navigation-link" uk-toggle="target: #activity-departments-submenu; animation: uk-animation-fade">ДІЯЛЬНІСТЬ</a>
+              <div id="activity-departments-submenu" hidden>
+                <ul class="submenu">
+                  <li class="navigation-item"><a href="#" class="navigation-link">Наукові досягнення</a></li>
+                  <li class="navigation-item"><a href="#" class="navigation-link">Науково-технічні розробки</a></li>
+                </ul>
+              </div>
+              
+            </li>
 						<li class="navigation-item"><a href="graduate-school.html" class="navigation-link">АСПІРАНТУРА</a></li>
 						<li class="navigation-item"><a href="#" class="navigation-link">ПУБЛІКАЦІЇ</a></li>
 						<li class="navigation-item"><a href="#" class="navigation-link">КОНТАКТИ</a></li>
