--- a/home.html
+++ b/home.html
@@ -116,7 +116,7 @@
 						<li>в <strong>розробках і удосконаленні технологій</strong> отримання кристалів і виробів із них.</li>
 					</ul>
 					<p>В Інстітуті розробляються технології отримання і практичного використання лазерних кристалів тугоплавких оксидів, 
-						сполук А<sup>II</sup>B<sup>VI</sup> и їх твердих розчинів, нелінійно-оптичних органічних кристалів, лазерної и оптичної оксидної кераміки 
+						сполук А<sup>II</sup>B<sup>VI</sup> та їх твердих розчинів, нелінійно-оптичних органічних кристалів, лазерної и оптичної оксидної кераміки 
 						і інших матеріалів у відповідності до профілю своєї діяльності.</p>
 				</section>
 				<section class="section section-technology">
