--- a/leadership.html
+++ b/leadership.html
@@ -93,7 +93,146 @@
 			</div>
 		</header>
 		<main id="main">
-   
+      <section class="section section-leadership">
+        <div class="container">
+          <h3>КЕРІВНИЦТВО ІНСТИТУТУ</h3>
+          <div class="peoples-list">
+            <div class="card-people">
+              <div class="card-img"><img src="images/Притула.jpg" alt="Притула І.М"></div>
+              <div class="card-text">
+                <div class="card-text-top">
+                  <div class="people-status">Директор</div>
+                  <div class="people-name">Притула Ігор Михайлович</div>
+                  <p>Член-кореспондент НАН України, доктор фізико-математичних наук, професор.</p>
+                </div>
+                <div class="people-contact">
+                  <a href="#peole-contact-holder" class="people-contact-link" uk-toggle="target: #peole-contact-holder; animation: uk-animation-fade">Контакти</a>
+                  <div class="peole-contact-holder" id="peole-contact-holder" hidden>
+                    <ul class="tel-list">
+                      <li><a href="tel:+380573402230">тел.:  +38 (057) 340 22 30</a></li>
+                      <li><a href="tel:+380503025430">моб.: +38 (050) 302 54 30,</a> <a href="tel:+380935150937">+38 (093) 515 09 37</a></li>
+                      <li><a href="fax:+380573409343">факс: +38 (057) 340 93 43</a></li>
+                    </ul>
+                    <ul class="mail-list">
+                      <li><a href="mailto:pritula@isc.kharkov.ua">pritula@isc.kharkov.ua, </a></li>
+                      <li><a href="mailto:igormpritula@gmail.com">igormpritula@gmail.com</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-people">
+              <div class="card-img"><img src="images/Верещак.jpg" alt="Верещак О.І"></div>
+              <div class="card-text">
+                <div class="card-text-top">
+                  <div class="people-status">Заcтупник директора з загальних питань</div>
+                  <div class="people-name">Верещак Олександр Іванович</div>
+                </div>
+                <div class="people-contact">
+                  <a href="#peole-contact-holder-2" class="people-contact-link" uk-toggle="target: #peole-contact-holder-2; animation: uk-animation-fade">Контакти</a>
+                  <div class="peole-contact-holder" id="peole-contact-holder-2" hidden>
+                    <ul class="tel-list">
+                      <li><a href="tel:+380573410127">тел.: +38 (057) 341 01 27 </a></li>
+                      <li><a href="fax:+380573409343">факс: +38 (057) 340 93 43</a></li>
+                    </ul>
+                    <ul class="mail-list">
+                      <li><a href="mailto:pritula@isc.kharkov.ua">vereschak@isc.kharkov.ua </a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-people">
+              <div class="card-img"><img src="images/Толмачов.jpg" alt="Толмачов О.В"></div>
+              <div class="card-text">
+                <div class="card-text-top">
+                  <div class="people-status">Заступник директора з наукової роботи</div>
+                  <div class="people-name">Толмачов Олександр Володимирович</div>
+                  <p>Член-кореспондент НАН України, доктор фізико-математичних наук, професор.</p>
+                </div>
+                <div class="people-contact">
+                  <a href="#peole-contact-holder-3" class="people-contact-link" uk-toggle="target: #peole-contact-holder-3; animation: uk-animation-fade">Контакти</a>
+                  <div class="peole-contact-holder" id="peole-contact-holder-3" hidden>
+                    <ul class="tel-list">
+                      <li><a href="tel:+380573402230">тел.: +38 (057) 340 42 58,</a> <a href="tel:+380573410289">+38 (057) 341 02 89</a></li>
+                    </ul>
+                    <ul class="mail-list">
+                      <li><a href="mailto:alexander.tolmachev@isc.kharkov.ua">alexander.tolmachev@isc.kharkov.ua,</a></li>
+                      <li><a href="mailto:alexander.v.tolmachev@gmail.com">alexander.v.tolmachev@gmail.com</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-people">
+              <div class="card-img"><img src="images/Лемишенко.jpg" alt="Лемишенко И.Г"></div>
+              <div class="card-text">
+                <div class="card-text-top">
+                  <div class="people-status">Заступниця директора з зовнішньоекономічної діяльностір</div>
+                  <div class="people-name">Лемішенко Ірина Генадіївна</div>
+                </div>
+                <div class="people-contact">
+                  <a href="#peole-contact-holder-4" class="people-contact-link" uk-toggle="target: #peole-contact-holder-4; animation: uk-animation-fade">Контакти</a>
+                  <div class="peole-contact-holder" id="peole-contact-holder-4" hidden>
+                    <ul class="tel-list">
+                      <li><a href="tel:+380573409343">тел.: +38 (057) 340 93 43 </a></li>
+                      <li><a href="fax:+380573409343">факс: +38(057) 340 93 43</a></li>
+                    </ul>
+                    <ul class="mail-list">
+                      <li><a href="mailto:pritula@isc.kharkov.ua">dped@isc.kharkov.ua</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-people">
+              <div class="card-img"><img src="images/Кулик.jpg" alt="Кулик К.М"></div>
+              <div class="card-text">
+                <div class="card-text-top">
+                  <div class="people-status">Учений секретар</div>
+                  <div class="people-name">Кулик Костянтин Миколайович</div>
+                  <p>Кандидат фізико-математичних наук</p>
+                </div>
+                <div class="people-contact">
+                  <a href="#peole-contact-holder-5" class="people-contact-link" uk-toggle="target: #peole-contact-holder-5; animation: uk-animation-fade">Контакти</a>
+                  <div class="peole-contact-holder" id="peole-contact-holder-5" hidden>
+                    <ul class="tel-list">
+                      <li><a href="tel::+380573410139">тел.: +38 (057) 341 01 39 </a></li>
+                    </ul>
+                    <ul class="mail-list">
+                      <li><a href="mailto:koskul@isc.kharkov.ua">koskul@isc.kharkov.ua,</a></li>
+                      <li><a href="mailto:koskul1981@gmail.com">koskul1981@gmail.com</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-people">
+              <div class="card-img"><img src="images/Бевзюк.jpg" alt="Бевзюк О.О"></div>
+              <div class="card-text">
+                <div class="card-text-top">
+                  <div class="people-status">Головна юридична консультантка</div>
+                  <div class="people-name">Бевзюк Оксана Олександрівна</div>
+                  <p>Член-кореспондент НАН України доктор фізико-математичних наук, професор.</p>
+                </div>
+                <div class="people-contact">
+                  <a href="#peole-contact-holder-6" class="people-contact-link" uk-toggle="target: #peole-contact-holder-6; animation: uk-animation-fade">Контакти</a>
+                  <div class="peole-contact-holder" id="peole-contact-holder-6" hidden>
+                    <ul class="tel-list">
+                      <li><a href="tel:+380573410589">тел.: +38 (057) 341 05 89 </a></li>
+                      <li><a href="tel:+380503025430">моб.: +38 (097) 095 61 01</a></li>
+                    </ul>
+                    <ul class="mail-list">
+                      <li><a href="mailto:pritula@isc.kharkov.ua">pritula@isc.kharkov.ua, </a></li>
+                      <li><a href="mailto:bevz17@ukr.net">bevz17@ukr.net </a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 		</main>
 		<footer id="footer" class="footer">
 			<div class="container">
