--- a/leadership.html
+++ b/leadership.html
@@ -197,7 +197,7 @@
                   <a href="#peole-contact-holder-5" class="people-contact-link" uk-toggle="target: #peole-contact-holder-5; animation: uk-animation-fade">Контакти</a>
                   <div class="peole-contact-holder" id="peole-contact-holder-5" hidden>
                     <ul class="tel-list">
-                      <li><a href="tel::+380573410139">тел.: +38 (057) 341 01 39 </a></li>
+                      <li><a href="tel:+380573410139">тел.: +38 (057) 341 01 39 </a></li>
                     </ul>
                     <ul class="mail-list">
                       <li><a href="mailto:koskul@isc.kharkov.ua">koskul@isc.kharkov.ua,</a></li>
