--- a/olc.html
+++ b/olc.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div id="wrapper">
-		<header id="header">
+    <header id="header">
 			<div class="container">
 				<div class="header-top">
 					<a href="home.html" class="logo-holder">
@@ -46,28 +46,28 @@
 					<a href="#navigation" class="dropdown" uk-toggle="target: #navigation; animation: uk-animation-fade"><span class="dropdown-icon"></span></a>
 					<ul class="navigation" id="navigation" hidden>
 						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
+						<li class="navigation-item"><a href="events-news.html" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link">
 							<a href="#structure-submenu" class="navigation-link" uk-toggle="target: #structure-submenu; animation: uk-animation-fade">СТРУКТУРА</a>
 							<div id="structure-submenu" class="structure-submenu" hidden>
 								<ul class="submenu">
-									<li class="navigation-item"><a href="#" class="navigation-link">Керівництво</a></li>
+									<li class="navigation-item"><a href="leadership.html" class="navigation-link">Керівництво</a></li>
 									<li class="navigation-item ">
 										<a href="#science-departments-submenu" class="navigation-link" uk-toggle="target: #science-departments-submenu; animation: uk-animation-fade">Наукові відділи</a>
 										<ul class="sub-submenu " id="science-departments-submenu" hidden>
-											<li class="navigation-item"><a href="noc.html" class="navigation-link">Відділ теорії конденсованного стану речовин</a></li>
-											<li class="navigation-item"><a href="cmcc.html" class="navigation-link">Відділ кристалічних матеріалів склідних сполук</a></li>
+											<li class="navigation-item"><a href="tcfs.html" class="navigation-link">Відділ теорії конденсованного стану речовин</a></li>
+											<li class="navigation-item"><a href="cmcc.html" class="navigation-link">Відділ кристалічних матеріалів складних сполук</a></li>
 											<li class="navigation-item"><a href="olc.html" class="navigation-link">Відділ оптичних та лазерних кристалів</a></li>
-											<li class="navigation-item"><a href="tcfs.html" class="navigation-link">Відділ нелінійно-оптичних кристалів</a></li>
+											<li class="navigation-item"><a href="noc.html" class="navigation-link">Відділ нелінійно-оптичних кристалів</a></li>
 										</ul>
 									</li>
 									<li class="navigation-item ">
 										<a href="#auxiliary-departments-submenu" class="navigation-link" uk-toggle="target: #auxiliary-departments-submenu; animation: uk-animation-fade">Допоміжні відділи</a>
 										<ul class="sub-submenu" id="auxiliary-departments-submenu" hidden>
-											<li class="navigation-item"><a href="#" class="navigation-link">Відділ бухгалтерського обліку та звітності</a></li>
-											<li class="navigation-item"><a href="#" class="navigation-link">Відділ кадрів</a></li>
-											<li class="navigation-item"><a href="#" class="navigation-link">Господарсько-експлуатаційний відділ</a></li>
-											<li class="navigation-item"><a href="#" class="navigation-link">Паливо-виробничий відділ</a></li>
+											<li class="navigation-item"><a href="accounting-reporting-department.html" class="navigation-link">Відділ бухгалтерського обліку та звітності</a></li>
+											<li class="navigation-item"><a href="human-resources-department.html" class="navigation-link">Відділ кадрів</a></li>
+											<li class="navigation-item"><a href="economic-operational-department.html" class="navigation-link">Господарсько-експлуатаційний відділ</a></li>
+											<li class="navigation-item"><a href="fuel-production-department.html" class="navigation-link">Паливо-виробничий відділ</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -78,15 +78,15 @@
               <a href="#activity-departments-submenu" class="navigation-link" uk-toggle="target: #activity-departments-submenu; animation: uk-animation-fade">ДІЯЛЬНІСТЬ</a>
               <div id="activity-departments-submenu" hidden>
                 <ul class="submenu">
-                  <li class="navigation-item"><a href="#" class="navigation-link">Наукові досягнення</a></li>
-                  <li class="navigation-item"><a href="#" class="navigation-link">Науково-технічні розробки</a></li>
+                  <li class="navigation-item"><a href="scientific-achievements.html" class="navigation-link">Наукові досягнення</a></li>
+                  <li class="navigation-item"><a href="scientific-technical-developments.html" class="navigation-link">Науково-технічні розробки</a></li>
                 </ul>
               </div>
               
             </li>
 						<li class="navigation-item"><a href="graduate-school.html" class="navigation-link">АСПІРАНТУРА</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link">ПУБЛІКАЦІЇ</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link">КОНТАКТИ</a></li>
+						<li class="navigation-item"><a href="publications.html" class="navigation-link">ПУБЛІКАЦІЇ</a></li>
+						<li class="navigation-item"><a href="contacts.html" class="navigation-link">КОНТАКТИ</a></li>
 					</ul>
 				</nav>
 				<span class="bg-img bg-page bg-img-1"><img src="images/bg-img-1.svg" alt="img"></span>
