--- a/olc-publications.html
+++ b/olc-publications.html
@@ -67,7 +67,7 @@
                         <li class="navigation-item"><a href="accounting-reporting-department.html" class="navigation-link">Відділ бухгалтерського обліку та звітності</a></li>
                         <li class="navigation-item"><a href="human-resources-department.html" class="navigation-link">Відділ кадрів</a></li>
                         <li class="navigation-item"><a href="economic-operational-department.html" class="navigation-link">Господарсько-експлуатаційний відділ</a></li>
-                        <li class="navigation-item"><a href="fuel-production-department.html" class="navigation-link">Паливо-виробничий відділ</a></li>
+                        <li class="navigation-item"><a href="planning-production-department.html" class="navigation-link">Планово-виробничий відділ</a></li>
                       </ul>
                     </li>
                   </ul>
