--- a/graduate-school.html
+++ b/graduate-school.html
@@ -142,92 +142,84 @@
             <h3>Контакти:</h3>
             <p>Завідувачка аспірантури <a href="pablick/otd7/cv/CV_Добротворська_Відділ 7.pdf" target="_blank">Добротворська Марія Вікторівна</a>, <a href="tel:+380573410314">тел.: +38(057) 341-03-14</a>, <a href="mailto:mdobro@isc.kharkov.ua.">e-mail: mdobro@isc.kharkov.ua.</a></p>
             <p>Питання до вступного іспиту до аспірантури зі спеціальності 132  <a href="#">«Матеріалознавство»</a></p>
-            <ol>
+            <h4>Положення та правила</h4>
+            <ul>
+              <li>Положення про проектну групу освітньої програми та групу забезпечення спеціальності  <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Положення про організацію навчального процесу в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Порядок підготовки здобувачів ступенів доктора філософії в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Порядок розробки та затвердження робочих програм навчальних дисциплін освітньо-наукової програми третього (освітньо-наукового) рівня вищої освіти за спеціальністю 132 Матеріалознавство <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Положення про порядок вільного вибору здобувачами вищої освіти на третьому освітньо-науковому рівні вибіркових дисциплін <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Положення про академічну доброчесність та етику академічних взаємовідносин в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Положення про Комісію з питань академічної доброчесності та етики академічних взаємовідносин в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Положення про систему виявлення та запобігання академічному плагіату в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Положення про порядок врегулювання конфліктів в освітньому процесі в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Положення про апеляцію результатів підсумкового контролю знань здобувачів вищої освіти в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Положення про внутрішнє забезпечення якості освіти Інституту монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Положення про анкетування (опитування) здобувачів вищої освіти Інституту монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Положення про відділ аспірантури Інституту монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
+            </ul>
+            <h4>Навчання</h4>
+            <ul>
+              <li>Освітньо-наукова-програма <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Навчальний план <a href="#" target="_blank">(посилання на pdf)</a></li>
               <li>
-                <h4>Положення та правила</h4>
+                <p>Робочі програми дисциплін:</p>
                 <ul>
-                  <li>Положення про проектну групу освітньої програми та групу забезпечення спеціальності  <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Положення про організацію навчального процесу в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Порядок підготовки здобувачів ступенів доктора філософії в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Порядок розробки та затвердження робочих програм навчальних дисциплін освітньо-наукової програми третього (освітньо-наукового) рівня вищої освіти за спеціальністю 132 Матеріалознавство <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Положення про порядок вільного вибору здобувачами вищої освіти на третьому освітньо-науковому рівні вибіркових дисциплін <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Положення про академічну доброчесність та етику академічних взаємовідносин в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Положення про Комісію з питань академічної доброчесності та етики академічних взаємовідносин в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Положення про систему виявлення та запобігання академічному плагіату в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Положення про порядок врегулювання конфліктів в освітньому процесі в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Положення про апеляцію результатів підсумкового контролю знань здобувачів вищої освіти в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Положення про внутрішнє забезпечення якості освіти Інституту монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Положення про анкетування (опитування) здобувачів вищої освіти Інституту монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Положення про відділ аспірантури Інституту монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
+                  <li>Філософія науки та культури <a href="#" target="_blank">(посилання на pdf)</a></li>
+                  <li>Іноземна мова професійного спрямування для підготовки аспірантів до рівня загальноєвропейського стандарту володіння мовою С1 <a href="#" target="_blank">(посилання на pdf)</a></li>
+                  <li>Менеджмент наукових проектів, підготовка наукових публікацій та презентацій <a href="#" target="_blank">(посилання на pdf)</a></li>
+                  <li>Сучасні методи досліджень властивостей матеріалів <a href="#" target="_blank">(посилання на pdf)</a></li>
+                  <li>Основи обробки матеріалів та одержання виробів з них <a href="#" target="_blank">(посилання на pdf)</a></li>
+                  <li>Наукові основи технологій вирощування монокристалів <a href="#" target="_blank">(посилання на pdf)</a></li>
+                  <li>Фізико-технологічні основи отримання керамічних матеріалів <a href="#" target="_blank">(посилання на pdf)</a></li>
+                  <li>Наноматеріали та нанотехнології <a href="#" target="_blank">(посилання на pdf)</a></li>
+                  <li>Розклад занять <a href="#" target="_blank">(посилання на pdf)</a></li>
                 </ul>
               </li>
               <li>
-                <h4>Навчання</h4>
+                <p>Індивідуальні плани аспірантів:</p>
                 <ul>
-                  <li>Освітньо-наукова-програма <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>Навчальний план <a href="#" target="_blank">(посилання на pdf)</a></li>
-                  <li>
-                    <p>Робочі програми дисциплін:</p>
-                    <ul>
-                      <li>Філософія науки та культури <a href="#" target="_blank">(посилання на pdf)</a></li>
-                      <li>Іноземна мова професійного спрямування для підготовки аспірантів до рівня загальноєвропейського стандарту володіння мовою С1 <a href="#" target="_blank">(посилання на pdf)</a></li>
-                      <li>Менеджмент наукових проектів, підготовка наукових публікацій та презентацій <a href="#" target="_blank">(посилання на pdf)</a></li>
-                      <li>Сучасні методи досліджень властивостей матеріалів <a href="#" target="_blank">(посилання на pdf)</a></li>
-                      <li>Основи обробки матеріалів та одержання виробів з них <a href="#" target="_blank">(посилання на pdf)</a></li>
-                      <li>Наукові основи технологій вирощування монокристалів <a href="#" target="_blank">(посилання на pdf)</a></li>
-                      <li>Фізико-технологічні основи отримання керамічних матеріалів <a href="#" target="_blank">(посилання на pdf)</a></li>
-                      <li>Наноматеріали та нанотехнології <a href="#" target="_blank">(посилання на pdf)</a></li>
-                      <li>Розклад занять <a href="#" target="_blank">(посилання на pdf)</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <p>Індивідуальні плани аспірантів:</p>
-                    <ul>
-                      <li>Балабанов А.Е. <a href="pablick/otd7/cv/CV_Балабанов_Відділ 7.pdf" target="_blank">(посилання на pdf)</a></li>
-                      <li>Задорожній В.С. <a href="pablick/25/cv/CV_zadorojnyi.pdf" target="_blank">(посилання на pdf)</a></li>
-                      <li>Тимошенко А.Д. <a href="pablick/otd7/cv/CV_Тимошенко_Відділ 7.pdf" target="_blank">(посилання на pdf)</a></li>
-                      <li>Сірик Ю.В. <a href="pablick/23/cv/CV_Сірик_Відділ 23.pdf" target="_blank">(посилання на pdf)</a></li>
-                    </ul>
-                  </li>
+                  <li>Балабанов А.Е. <a href="pablick/otd7/cv/CV_Балабанов_Відділ 7.pdf" target="_blank">(посилання на pdf)</a></li>
+                  <li>Задорожній В.С. <a href="pablick/25/cv/CV_zadorojnyi.pdf" target="_blank">(посилання на pdf)</a></li>
+                  <li>Тимошенко А.Д. <a href="pablick/otd7/cv/CV_Тимошенко_Відділ 7.pdf" target="_blank">(посилання на pdf)</a></li>
+                  <li>Сірик Ю.В. <a href="pablick/23/cv/CV_Сірик_Відділ 23.pdf" target="_blank">(посилання на pdf)</a></li>
+                </ul>
+              </li>
+            </ul>
+            <h4>Додаткові матеріали </h4>
+            <ul>
+              <li>
+                <p>Накази</p>
+                <ul>
+                  <li><a href="#">(посилання на pdf)</a></li>
+                  <li><a href="#">(посилання на pdf)</a></li>
                 </ul>
               </li>
               <li>
-                <h4>Додаткові матеріали </h4>
+                <p>Міжнародні договори </p>
                 <ul>
-                  <li>
-                    <p>Накази</p>
-                    <ul>
-                      <li><a href="#">(посилання на pdf)</a></li>
-                      <li><a href="#">(посилання на pdf)</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <p>Міжнародні договори </p>
-                    <ul>
-                      <li><a href="#">(посилання на pdf)</a></li>
-                      <li><a href="#">(посилання на pdf)</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <p>Відгуки стейкхолдеров </p>
-                    <ul>
-                      <li><a href="#">(посилання на pdf)</a></li>
-                      <li><a href="#">(посилання на pdf)</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <p>Відгуки випускників </p>
-                    <ul>
-                      <li><a href="#">(посилання на pdf)</a></li>
-                      <li><a href="#">(посилання на pdf)</a></li>
-                    </ul>
-                  </li>
-                  <li>Етичний кодекс ученого України <a href="#">(посилання на pdf)</a></li>
-                  <li>Національна стратегія Індустрії 4.0 <a href="#">(посилання на pdf)</a></li>
+                  <li><a href="#">(посилання на pdf)</a></li>
+                  <li><a href="#">(посилання на pdf)</a></li>
                 </ul>
               </li>
-              <li><h4>Документи до акредитації</h4> <a href="#">(посилання на pdf)</a></li>
-            </ol>
+              <li>
+                <p>Відгуки стейкхолдеров </p>
+                <ul>
+                  <li><a href="#">(посилання на pdf)</a></li>
+                  <li><a href="#">(посилання на pdf)</a></li>
+                </ul>
+              </li>
+              <li>
+                <p>Відгуки випускників </p>
+                <ul>
+                  <li><a href="#">(посилання на pdf)</a></li>
+                  <li><a href="#">(посилання на pdf)</a></li>
+                </ul>
+              </li>
+              <li>Етичний кодекс ученого України <a href="#">(посилання на pdf)</a></li>
+              <li>Національна стратегія Індустрії 4.0 <a href="#">(посилання на pdf)</a></li>
+            </ul>
+            <p><h4>Документи до акредитації</h4> <a href="#">(посилання на pdf)</a></p>
             <p></p>
             <p></p>
           </artticle>
